route_table.tf
# Define The Route table
resource "aws_route_table" "public_route" {
    vpc_id = "${aws_vpc.default.id}"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_internet_gateway.gateway.id}"
    } 
}

# Assign the route table to the public Subnet
resource "aws_route_table_association" "public_route_1" {
    subnet_id = "${aws_subnet.public_subnet_1.id}"
    route_table_id = "${aws_route_table.public_route.id}" 
}

resource "aws_route_table_association" "public_route_2" {
    subnet_id = "${aws_subnet.public_subnet_2.id}"
    route_table_id = "${aws_route_table.public_route.id}" 
}

resource "aws_route_table" "private_route" {
    vpc_id = "${aws_vpc.default.id}"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_nat_gateway.nat_gateway.id}"
    }
}

# Assign the route table to the public Subnet
resource "aws_route_table_association" "private_route_1" {
    subnet_id = "${aws_subnet.private_subnet_1.id}"
    route_table_id = "${aws_route_table.private_route.id}" 
}

resource "aws_route_table_association" "private_route_2" {
    subnet_id = "${aws_subnet.private_subnet_2.id}"
    route_table_id = "${aws_route_table.private_route.id}" 
}
